files/base/gotify/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  labels:
    app: gotify
    auto-update-hour: '00'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: gotify
          image: docker.io/gotify/server:2.0
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: gotify
              mountPath: /data
      volumes:
        - name: gotify
          persistentVolumeClaim:
            claimName: gotify

---
apiVersion: v1
kind: Service
metadata:
  name: gotify
  labels:
    app: gotify
spec:
  selector:
    app: gotify
  clusterIP: None
  ports:
    - protocol: TCP
      name: web
      port: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gotify
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app: gotify
spec:
  rules:
    - host: gotify.10.20.30.11.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gotify
                port:
                  number: 80
